--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -8,7 +8,10 @@
 
 
 <ion-content>
-
+<ion-refresher (ionRefresh)="doRefresh($event)">
+     <ion-refresher-content></ion-refresher-content>
+</ion-refresher>
+ {{result.kind}}
   <ion-card *ngFor="let item of cardItems">
 
     <ion-item>
