Strinified html shown up from lock data

--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -16,10 +16,10 @@
 
     <ion-item>
       <ion-avatar item-start>
-        <img [src]="item.author.avatar_URL">
+        <img [src]="item.website.logo">
       </ion-avatar>
-      <h2>{{item.author.name}}</h2>
-      <p>{{item.author.URL}}</p>
+      <h2>{{item.website.name}}</h2>
+      <!-- <p>{{item.author.URL}}</p> -->
     </ion-item>
 
   <!--  <img [src]="item.image">-->
