--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -3,8 +3,7 @@
   <div class="splash-info">
     <div class="splash-logo"></div>
     <div class="splash-intro">
-      <!-- {{ 'WELCOME_INTRO' | translate }} -->
-        欢迎来到币提醒！
+      {{ 'WELCOME_INTRO' | translate }}
     </div>
   </div>
   <div padding>
