--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -12,19 +12,7 @@
     <ion-list *ngIf="page == 'main'">
       <ion-item *ngFor="let item of settingList">
         <ion-label>{{ item.name }}</ion-label>
-        <ion-toggle formControlName="option1"></ion-toggle>
-      </ion-item>
-
-
-      <button ion-item [navPush]="subSettings" [navParams]="profileSettings">
-        {{ 'SETTINGS_PROFILE_BUTTON' | translate }}
-      </button>
-    </ion-list>
-
-    <ion-list *ngIf="page == 'profile'">
-      <ion-item>
-        <ion-label>{{ 'SETTINGS_OPTION4' | translate }}</ion-label>
-        <ion-input formControlName="option4"></ion-input>
+        <ion-toggle [formControlName]="item.option"></ion-toggle>
       </ion-item>
     </ion-list>
   </form>
