Change search to be a monitoring for settings

--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -19,4 +19,5 @@
       <ion-note item-end *ngIf="item.note">{{item.note}}</ion-note>
     </button>
   </ion-list>
+  <button ion-item (click)="press()"></button>
 </ion-content>
