--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -9,7 +9,7 @@
 
 
 <ion-content>
-<ion-refresher pulling-text="????" (ionRefresh)="doRefresh($event)">
+<ion-refresher pulling-text="下拉刷新" (ionRefresh)="doRefresh($event)">
      <ion-refresher-content></ion-refresher-content>
 </ion-refresher>
   <ion-card *ngFor="let item of cardItems">
