Nan | improvements for setting page, enbale miltiple setting existing

--- a/src/pages/list-master/list-master.html
+++ b/src/pages/list-master/list-master.html
@@ -1,13 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{ 'LIST_MASTER_TITLE' | translate }}</ion-title>
-
-    <ion-buttons end>
-      <button ion-button icon-only (click)="addItem()">
-        <ion-icon name="add"></ion-icon>
-      </button>
-    </ion-buttons>
+    <ion-title>设置</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -16,20 +10,17 @@
 
   <ion-list>
     <ion-item-sliding *ngFor="let item of currentItems">
-      <button ion-item (click)="openItem(item)">
-        <ion-avatar item-start>
-          <img [src]="item.profilePic" />
-        </ion-avatar>
+      <button ion-item (click)="openItem(item.name)">
         <h2>{{item.name}}</h2>
         <p>{{item.about}}</p>
-        <ion-note item-end *ngIf="item.note">{{item.note}}</ion-note>
+        <!-- <ion-note item-end *ngIf="item.note">{{item.note}}</ion-note> -->
       </button>
 
-      <ion-item-options>
+      <!-- <ion-item-options>
         <button ion-button color="danger" (click)="deleteItem(item)">
           {{ 'DELETE_BUTTON' | translate }}
         </button>
-      </ion-item-options>
+      </ion-item-options> -->
     </ion-item-sliding>
   </ion-list>
 </ion-content>
