--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -1,8 +1,8 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>{{ 'CARDS_TITLE' | translate }}</ion-title>
+  <ion-navbar  color="primary">
+    <ion-title align="center">{{ 'CARDS_TITLE' | translate }}</ion-title>
   </ion-navbar>
 
 </ion-header>
