Nan | improve on toggle of jpushsetting, enable cache login details after sign up

--- a/src/pages/jpush-setting/jpush-setting.html
+++ b/src/pages/jpush-setting/jpush-setting.html
@@ -16,6 +16,6 @@
 <ion-content>
   <ion-item>
     <ion-label>{{pushConfigs}}</ion-label>
-    <ion-toggle color="energized" (click)="setReceive()"></ion-toggle>
+    <ion-toggle color="energized" [(ngModel)]="receivePush" (ionChange)="setReceive()" ></ion-toggle>
   </ion-item>
 </ion-content>
