upload tutorial pics

--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -2,7 +2,8 @@
 <ion-header>
 
   <ion-navbar  color="primary">
-    <ion-title align="center">{{ 'CARDS_TITLE' | translate }}</ion-title>
+    <ion-title >{{ 'CARDS_TITLE' | translate }}</ion-title>
+
   </ion-navbar>
 
 </ion-header>
