cache logic for setting and jpush

--- a/src/pages/contat-info/contat-info.html
+++ b/src/pages/contat-info/contat-info.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>contatInfo</ion-title>
+    <ion-title>联系信息</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -25,10 +25,10 @@
 
 <ion-card>
   <ion-card-header>
-    官方网站
+    官方微信
   </ion-card-header>
   <ion-card-content>
-    bizhidaocoin@163.com
+    bizhidao66
   </ion-card-content>
 </ion-card>
 </ion-content>
