--- a/src/pages/usermanual/usermanual.html
+++ b/src/pages/usermanual/usermanual.html
@@ -15,18 +15,22 @@
   
   <ion-content class=" cards-bg">
   
-    <ion-card class="cards-list-demo">
-  
-      <ion-list>
-        <button ion-item>
-          刷新网站公告
-        </button>
-  
-        <button ion-item>
-          推送提醒
-        </button>
-  
-      </ion-list>
-    </ion-card>
+    <ion-card>
+
+    <ion-card-content>
+      <h1>币知道使用公告</h1>
+      <br/><br/>
+      <p>币知道为您提供最新的交易网站更新公告，主菜单刷新获取最近20条公告。 当有新公告更新时，币知道会第一时间推送铃声或者震动提醒
+      新公告。</p>
+      <br/><br/>
+      <p>币知道测试版本默认检测14家主流交易平台，用户可以在“推送网站设置”栏目中自由选择是否更新此交易平台的公告。</p>
+      <br/><br/>
+      <p>用户也可以在推送设置中选择开启或者关闭第一时间推送铃声的服务</p>
+      <br/><br/>
+      <p>有任何的意见或者反馈，可以联系我们团队或直接加入我们的微信群进行讨论，我们的联系方式在上级菜单中的“联系方式”栏目中。</p>
+      
+    </ion-card-content>
+
+  </ion-card>
   
   </ion-content>
