http request start to connect to the server real

--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -37,7 +37,12 @@
 
 <ion-content>
 
-  <ion-refresher pulling-text="下拉刷新" (ionRefresh)="doRefresh($event)">
+  <ion-refresher  
+    pullingIcon="arrow-dropdown"
+    pullingText="Pull to refresh"
+    refreshingSpinner="circles"
+    refreshingText="Refreshing..." 
+  (ionRefresh)="doRefresh($event)">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
   <ion-list>
