--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -1,9 +1,10 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <ion-header>
 
-  <ion-navbar  color="primary">
-    <ion-title >{{ 'CARDS_TITLE' | translate }}</ion-title>
-
+  <ion-navbar center color="primary">
+    <!-- <ion-title >{{ 'CARDS_TITLE' | translate }}</ion-title> -->
+    <ion-title >币知道</ion-title>
+    <img width="40" height="40"  src="assets/icon/favicon.ico" alt="">
   </ion-navbar>
 
 </ion-header>
