--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -3,37 +3,14 @@
 
   <ion-navbar center color="primary">
     <!-- <ion-title >{{ 'CARDS_TITLE' | translate }}</ion-title> -->
-    <ion-title >币知道</ion-title>
-    <img width="40" height="40"  src="assets/icon/favicon.ico" alt="">
+    <ion-title>币知道
+          <img width="30" height="30"  src="assets/icon/favicon.ico" style="float:right">
+    </ion-title>
+    
   </ion-navbar>
 
 </ion-header>
 
-
-<!--<ion-content>-->
-<!--<ion-refresher pulling-text="下拉刷新" (ionRefresh)="doRefresh($event)">
-     <ion-refresher-content></ion-refresher-content>
-</ion-refresher>-->
-  <!--<ion-card *ngFor="let item of cardItems">
-
-    <ion-item>
-      <ion-avatar item-start>
-        <img [src]="item.website.logo">
-      </ion-avatar>
-      <h2>{{item.website.name}}</h2>
-      <p>{{item.time}}</p>
-    </ion-item>
-
-
-
-    <ion-card-content>
-      <h1>{{item.title}}</h1>
-      <br/><br/>
-      <div [innerHTML]="item.content"></div>
-    </ion-card-content>
-
-  </ion-card>-->
-<!--</ion-content>-->
 
 
 <ion-content>
