Nan | diable bizhidao Button on cards, disable sccs scroll-content for login ios

--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -4,7 +4,7 @@
   <ion-navbar center color="primary">
     <!-- <ion-title >{{ 'CARDS_TITLE' | translate }}</ion-title> -->
     <ion-title>币知道
-          <img width="30" height="30"  src="assets/icon/favicon.ico" style="float:right">
+          <!-- <img width="30" height="30"  src="assets/icon/favicon.ico" style="float:right"> -->
     </ion-title>
     
   </ion-navbar>
